# python-oop-project-101

./: Makefile  README.md  main.py  pyproject.toml
tests/: test_validator.py
validator/: __init__.py  validator.py
