[project]
name = "hexlet-code"
version = "0.1.0"
description = "Validator"
readme = "README.md"
authors = [
    { name = "TonyYao0", email = "tony_yao@mail.ru" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["validator"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]